# EmailRecruiters

./: .env.example  .gitignore  CLAUDE.md  PERSONALIZATION.md  README.md  SUMMARY.md  USAGE_EXAMPLES.md  batch_process_jobs.sh  job_urls_example.txt  pyproject.toml  requirements.txt  run_cli.sh  test_basic.py
.claude/: commands
src/email_recruiters/: config.py
src/email_recruiters/cli/: __init__.py  analyze.py  batch_add.py  list_sequences.py  main.py  search_contacts.py  setup_wizard.py
src/email_recruiters/core/: __init__.py  apollo_search.py  job_scraper.py  role_analyzer.py
src/email_recruiters/database/: __init__.py  db.py  models.py
